--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@expo/metro-runtime": "^5.0.4",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
-    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native": "^7.1.10",
+    "@react-navigation/native-stack": "^7.3.14",
     "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.15",
     "expo-font": "~11.4.0",
@@ -22,9 +23,10 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-image-picker": "^8.2.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-screens": "^4.11.1",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
