--- a/app.json
+++ b/app.json
@@ -1,17 +1,13 @@
 {
-  "name": "Burgerpedia",
-  "displayName": "Burgerpedia",
   "expo": {
     "name": "Burgerpedia",
     "slug": "burgerpedia",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#8B0000"
+      "backgroundColor": "#8B0000",
+      "resizeMode": "contain"
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
@@ -19,12 +15,11 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#8B0000"
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "bundler": "metro"
     }
   }
 }
