--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Burgerpedia",
+  "name": "burgerpedia",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,30 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "^5.0.4",
-    "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-navigation/bottom-tabs": "^6.6.1",
-    "@react-navigation/native": "^7.1.10",
-    "@react-navigation/native-stack": "^7.3.14",
+    "@react-native-async-storage/async-storage": "1.19.3",
+    "@react-navigation/bottom-tabs": "^6.6.0",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.15",
-    "expo-font": "~11.4.0",
-    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-image-picker": "^8.2.1",
     "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "^4.11.1",
-    "react-native-web": "~0.19.6"
+    "react-native-safe-area-context": "4.7.4",
+    "react-native-screens": "~3.22.0",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "expo-image-picker": "~14.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
-    "@types/react-native": "^0.72.8",
+    "@types/react-native": "~0.72.2",
     "typescript": "^5.1.3"
-  }
+  },
+  "private": true
 }
