--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "strict": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "jsx": "react-jsx",
+    "jsx": "react-native",
     "lib": [
       "dom",
       "esnext"
@@ -17,5 +17,8 @@
   "include": [
     "**/*.ts",
     "**/*.tsx"
-  ]
+  ],
+   "expo": {
+    "jsEngine": "jsc"
+  }
 }
