--- a/package.json
+++ b/package.json
@@ -32,8 +32,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
+    "@tsconfig/react-native": "^3.0.5",
+    "@types/hammerjs": "^2.0.46",
+    "@types/jest": "^29.5.14",
     "@types/react": "~19.0.10",
     "@types/react-native": "~0.72.2",
+    "@types/stack-utils": "^2.0.3",
     "typescript": "~5.8.3"
   },
   "private": true
