--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -81,9 +81,9 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
-    namespace 'com.anonymous.burgerpedia'
+    namespace 'com.anonymous.burgify'
     defaultConfig {
-        applicationId 'com.anonymous.burgerpedia'
+        applicationId 'com.anonymous.burgify'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
