--- a/app.json
+++ b/app.json
@@ -1,6 +1,5 @@
 {
   "expo": {
-    "name": "Burgify",
     "slug": "burgify",
     "jsEngine": "jsc",
     "version": "1.0.0",
@@ -9,7 +8,7 @@
     "splash": {
       "image": "./assets/images/logo.png",
       "resizeMode": "contain",
-      "backgroundColor": "#8B0000"
+      "backgroundColor": "#FFFFFF"
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
@@ -18,7 +17,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/logo.png",
-        "backgroundColor": "#8B0000"
+        "backgroundColor": "#FFFFFF"
       },
       "package": "com.anonymous.burgify"
     },
