--- a/app.json
+++ b/app.json
@@ -10,20 +10,20 @@
       "resizeMode": "contain",
       "backgroundColor": "#FFFFFF"
     },
-    "assetBundlePatterns": ["**/*"],
-    "ios": {
-      "supportsTablet": true
-    },
+    "icon": "./assets/images/logo.png",
     "android": {
+      "package": "com.anonymous.burgify",
+      "label": " ",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/logo.png",
-        "backgroundColor": "#FFFFFF"
-      },
-      "package": "com.anonymous.burgify"
+        "backgroundColor": "transparent"
+      }
+    },
+    "ios": {
+      "supportsTablet": true
     },
     "web": {
       "bundler": "metro"
     }
   }
 }
-
