--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.9.0",
     "expo": "^53.0.0",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~13.3.1",
