--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "@types/hammerjs": "^2.0.46",
     "@types/jest": "^29.5.14",
     "@types/react": "~19.0.10",
-    "@types/react-native": "~0.72.2",
+    "@types/react-native": "^0.72.8",
     "@types/stack-utils": "^2.0.3",
-    "typescript": "~5.8.3"
+    "typescript": "^5.8.3"
   },
   "private": true
 }
