--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "jsx": "react-native",
+    "types": ["react", "react-native"],
     "lib": [
       "dom",
       "esnext"
