--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "expo-modules-core": "~2.4.0",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-native": "0.79.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
@@ -38,7 +38,8 @@
     "@tsconfig/react-native": "^3.0.5",
     "@types/hammerjs": "^2.0.46",
     "@types/jest": "^29.5.14",
-    "@types/react": "~19.0.10",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@types/react-native": "^0.72.8",
     "@types/stack-utils": "^2.0.3",
     "typescript": "^5.8.3"
