--- a/package.json
+++ b/package.json
@@ -31,14 +31,15 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.20.0",
+    "typescript": "~5.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@tsconfig/react-native": "^3.0.5",
     "@types/hammerjs": "^2.0.46",
     "@types/jest": "^29.5.14",
-    "@types/react": "^19.1.8",
+    "@types/react": "~19.0.10",
     "@types/react-dom": "^19.1.6",
     "@types/react-native": "^0.72.8",
     "@types/stack-utils": "^2.0.3",
