--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "^0.20.0",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "expo-av": "~15.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
