setted up firebase backend

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-runtime": "~5.0.4",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/blur": "^4.4.1",
+    "@react-native-firebase/auth": "^22.2.1",
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.9.12",
@@ -19,21 +20,23 @@
     "axios": "^1.9.0",
     "expo": "^53.0.0",
     "expo-app-loading": "^2.1.1",
+    "expo-av": "~15.1.6",
     "expo-font": "~13.3.1",
     "expo-image-picker": "~16.1.4",
     "expo-modules-core": "~2.4.0",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
+    "firebase": "^11.9.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-native": "0.79.3",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "^0.20.0",
-    "typescript": "~5.8.3",
-    "expo-av": "~15.1.6"
+    "typescript": "~5.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
