--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
+    "@react-native-community/cli": "^18.0.0",
     "@tsconfig/react-native": "^3.0.5",
     "@types/hammerjs": "^2.0.46",
     "@types/jest": "^29.5.14",
