--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/blur": "^4.4.1",
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.18",
@@ -18,14 +18,15 @@
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.9.0",
     "expo": "^53.0.0",
-    "expo-app-loading": "^2.1.1",
+    "expo-app-loading": "^1.1.2",
+    "expo-auth-session": "~6.2.0",
     "expo-av": "~15.1.6",
+    "expo-crypto": "~14.1.5",
     "expo-font": "~13.3.1",
     "expo-image-picker": "~16.1.4",
     "expo-modules-core": "~2.4.0",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
-    "firebase": "^11.9.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-native": "0.79.3",
