--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-modules-core": "~2.4.0",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
+    "firebase": "^11.9.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-native": "0.79.3",
