--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
+    "crypto-js": "^4.2.0",
     "expo": "^53.0.0",
     "expo-app-loading": "^1.1.2",
     "expo-auth-session": "~6.2.0",
@@ -43,6 +45,7 @@
     "@babel/core": "^7.26.0",
     "@react-native-community/cli": "^18.0.0",
     "@tsconfig/react-native": "^3.0.5",
+    "@types/crypto-js": "^4.2.2",
     "@types/hammerjs": "^2.0.46",
     "@types/jest": "^29.5.14",
     "@types/react": "~19.0.10",
