--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "crypto-js": "^4.2.0",
-    "expo": "^53.0.0",
+    "expo": "53.0.12",
     "expo-app-loading": "^1.1.2",
     "expo-auth-session": "~6.2.0",
     "expo-av": "~15.1.6",
@@ -31,7 +31,7 @@
     "expo-status-bar": "~2.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-native": "0.79.3",
+    "react-native": "0.79.4",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
