fixed keyboard appearance

--- a/app.json
+++ b/app.json
@@ -13,6 +13,7 @@
     },
     "icon": "./assets/images/logo.png",
     "android": {
+      "softwareKeyboardLayoutMode": "pan",
       "package": "com.anonymous.burgify",
       "label": " ",
       "adaptiveIcon": {
