--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
+    "buffer": "^6.0.3",
     "crypto-js": "^4.2.0",
     "expo": "53.0.12",
     "expo-app-loading": "^1.1.2",
